crates/rome_formatter/tests/specs/prettier/js/decorators/multiple.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: multiple.js

---
# Input
```js
const dog = {
  @readonly
  @nonenumerable
  @doubledValue
  legs: 4,

  @readonly
  @nonenumerable
  @doubledValue
  eyes: 2
};

const foo = {
  @multipleDecorators @inline @theyWontAllFitInOneline aVeryLongPropName: "A very long string as value"
};

```

# Output
```js
const dog = {
@readonly
  @nonenumerable
  @doubledValue
legs: 4,

@readonly
  @nonenumerable
  @doubledValue
eyes: 2;
}

const foo = {
@multipleDecorators @inline @theyWontAllFitInOneline
aVeryLongPropName: "A very long string as value";
}

```

# Errors
```
error[SyntaxError]: expected a property, a shorthand property, a getter, a setter, or a method but instead found '@'
  ┌─ multiple.js:2:3
  │
2 │   @readonly
  │   ^ Expected a property, a shorthand property, a getter, a setter, or a method here

error[SyntaxError]: decorators are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ multiple.js:3:3
  │
3 │   @nonenumerable
  │   ^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: decorators are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ multiple.js:4:3
  │
4 │   @doubledValue
  │   ^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: expected `class` but instead found `legs`
  ┌─ multiple.js:5:3
  │
5 │   legs: 4,
  │   ^^^^ unexpected

error[SyntaxError]: expected an expression but instead found '@'
  ┌─ multiple.js:7:3
  │
7 │   @readonly
  │   ^ Expected an expression here

error[SyntaxError]: decorators are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ multiple.js:8:3
  │
8 │   @nonenumerable
  │   ^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: decorators are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ multiple.js:9:3
  │
9 │   @doubledValue
  │   ^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: expected `class` but instead found `eyes`
   ┌─ multiple.js:10:3
   │
10 │   eyes: 2
   │   ^^^^ unexpected

error[SyntaxError]: expected a statement but instead found '}'
   ┌─ multiple.js:11:1
   │
11 │ };
   │ ^ Expected a statement here

error[SyntaxError]: expected a property, a shorthand property, a getter, a setter, or a method but instead found '@'
   ┌─ multiple.js:14:3
   │
14 │   @multipleDecorators @inline @theyWontAllFitInOneline aVeryLongPropName: "A very long string as value"
   │   ^ Expected a property, a shorthand property, a getter, a setter, or a method here

error[SyntaxError]: decorators are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ multiple.js:14:23
   │
14 │   @multipleDecorators @inline @theyWontAllFitInOneline aVeryLongPropName: "A very long string as value"
   │                       ^^^^^^^ TypeScript only syntax

error[SyntaxError]: decorators are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ multiple.js:14:31
   │
14 │   @multipleDecorators @inline @theyWontAllFitInOneline aVeryLongPropName: "A very long string as value"
   │                               ^^^^^^^^^^^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: expected `class` but instead found `aVeryLongPropName`
   ┌─ multiple.js:14:56
   │
14 │   @multipleDecorators @inline @theyWontAllFitInOneline aVeryLongPropName: "A very long string as value"
   │                                                        ^^^^^^^^^^^^^^^^^ unexpected

error[SyntaxError]: expected a statement but instead found '}'
   ┌─ multiple.js:15:1
   │
15 │ };
   │ ^ Expected a statement here


```


